--- a/src/front/Pages/Counter.razor
+++ b/src/front/Pages/Counter.razor
@@ -1,4 +1,5 @@
 ﻿@page "/counter"
+@inject DaprClient Client
 
 <PageTitle>Counter</PageTitle>
 
@@ -8,11 +9,18 @@
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
+
 @code {
+
     private int currentCount = 0;
 
-    private void IncrementCount()
+    protected override async Task OnInitializedAsync()
     {
-        currentCount++;
+        currentCount = await Client.GetStateAsync<int>("statestore", "count");
+    }
+
+    private async Task  IncrementCount()
+    {
+        await Client.PublishEventAsync("pubsub", "counter", ++currentCount);        
     }
 }
